--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,7 @@ body {
 
 .container {
   height: 100vh;
-  width: 100vh;
+  width: 100vw; /* 修正 */
   margin: 0 auto;
   text-align: center;
   visibility: hidden;
@@ -120,7 +120,6 @@ body {
   display: inline-block;
   max-width: 100%;
   height: 350px;
-  /* height: auto; */
 }
 
 .six .hat {
@@ -128,7 +127,6 @@ body {
   width: 80px;
   top: -35%;
   left: 41.5%;
-  /* transform: scale(0.1); */
 }
 
 .baloons img {
@@ -282,7 +280,6 @@ body {
 
   .six .hat {
     width: 50px;
-    /* top: -20px; */
   }
 
   .wish-hbd {
@@ -298,3 +295,4 @@ body {
     font-weight: lighter;
   }
 }
+
